doc: complite swagger doc
