# src/types/types.ts
@@ -7,3 +7,11 @@ export interface User extends Entity {
   login: string;
   password: string;
 }
+
+export enum StatusCodes {
+  "SUCCSESS" = 200,
+  "CREATED" = 201,
+  "DELETED" = 204,
+  "BAD REQUEST" = 400,
+  "AUTORIZATION ERROR" = 401,
+}
