# swagger.json
@@ -1,314 +1,268 @@
 {
-  "openapi": "3.1.0",
+    "openapi": "3.0.2",
     "info": {
-      "version": "1.0.0", 
-      "title": "Express Auth App ",
-      "description": "API for test",
-      "license": "ISC"
+      "title": "Express Auth App",
+      "version": "1.0",
+      "description": "Api documentation and test"
     },
-  
+    "servers": [
+      {
+        "url": "http://localhost:4000/"
+      }
+    ],
     "tags": [
       {
         "name": "Auth",
         "description": "Autorization API"
       }
     ],
-    "securityDefinitions":{
-      "Bearer":{
-        "type": "apiKey",
-        "name": "Authorization",
-        "description": "Enter your token in format *Bearer token*",
-        "in": "header"
-      }
-    },
-    "paths":{
+    "paths": {
       "/auth/signin": {
         "post": {
+          "summary": "Returns the authentication  cookie and user",
+          "description": "Get tokens and user info",
           "tags": ["Auth"],
-          "summary": "Login and returns the authentication  cookie",
-          "description": "Get token",
-          "requestBody": {},
-          "parameters": [
-            {
-              "name": "AuthInfo",
-              "in": "body",
-              "description": "User auth info",
-              "schema": {
-                "required": [
-                  "login",
-                  "password"
-                ],
-                "properties": {
-                  "login": {
-                    "type": "string"
-                  },       
-                  "password": {
-                    "type": "string"
-                  }       
-                },
-                "example": {
-                  "login": "IMask",
-                  "password": "Tesla4ever"
-                }
-              }
-            }
-          ],
-          "produces": ["application/json"],
+          "requestBody": {
+            "$ref": "#/components/requestBodies/Autorization"
+          },
           "responses": {
             "200": {
-              "description": "Successeful login.  The session ID is returned in a cookie named `refreshToken`. You need to include this cookie in subsequent requests.",
-              "header":{
+              "description": "Successeful login.   Response is returned in a cookie named `refreshToken`.  You need to include this cookie in subsequent requests\n",
+              "headers": {
                 "Set-Cookie": {
                   "schema": {
                     "type": "string",
-                    "example":"refreshToken=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6IklNYXNrQGltYXNrLnJ1IiwiaWF0IjoxNjkxNjE0MDk5LCJleHAiOjE2OTE2MTc2OTl9.raq5-L2_IzcMoC7TgSjfFMfpyFuMF5grRJy43Qm-9zc"
+                    "example": "refreshToken=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6IklNYXNrQGltYXNrLnJ1IiwiaWF0IjoxNjkxNjE0MDk5LCJleHAiOjE2OTE2MTc2OTl9.raq5-L2_IzcMoC7TgSjfFMfpyFuMF5grRJy43Qm-9zc; Path=/; HttpOnly"
                   }
                 }
               },
               "content": {
                 "application/json": {
                   "schema": {
-                    "properties": {
-                      "token": {
-                        "type":"string"
-                      },
-                      "user": {
-                        "type": "object"
-                      }      
-                    }
+                  "$ref": "#/components/schemas/AutorizationResponse"
                   }
                 }
               }
             },
-            "400": {
-              "description": "Bad Request",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"
-              }
+            "400":{
+              "$ref": "#/components/responses/400"
             },
-            "401": {
-              "description": "Authorization error",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"
-              }
+            "401":{
+              "$ref": "#/components/responses/401"
             }
+            
           }
         }
       },
       "/auth/signup": {
         "post": {
+          "summary": "User registration in bd",
+          "description": "Get tokens and user info",
           "tags": ["Auth"],
-          "summary": "SignUp",
-          "description": "Create new User",
-          "parameters": [
-            {
-              "name": "user",
-              "in": "body",
-              "description": "User that we want to create",
-              "schema": {
-                "required": [
-                  "name",
-                  "login",
-                  "password"
-                ],
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "login": {
-                    "type": "string"
-                  },       
-                  "password": {
-                    "type": "string"
-                  }       
-                },
-                "example": {
-                  "name": "Ilon Mask",
-                  "login": "IMask",
-                  "password": "Tesla4ever"
+          "requestBody": {
+            "$ref": "#/components/requestBodies/Autorization"
+          },
+          "responses": {
+            "201": {
+              "description": "Registration succsess. Resoinse is returned in a cookie named `refreshToken`.  You need to include this cookie in subsequent requests\n",
+              "headers": {
+                "Set-Cookie": {
+                  "schema": {
+                    "type": "string",
+                    "example": "refreshToken=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6IklNYXNrQGltYXNrLnJ1IiwiaWF0IjoxNjkxNjE0MDk5LCJleHAiOjE2OTE2MTc2OTl9.raq5-L2_IzcMoC7TgSjfFMfpyFuMF5grRJy43Qm-9zc; Path=/; HttpOnly"
+                  }
+                }
+              },
+              "content": {
+                "application/json": {
+                  "schema": {
+                  "$ref": "#/components/schemas/AutorizationResponse"
+                  }
                 }
               }
-              
-            }
-          ],
-          "produces": ["application/json"],
-          "responses": {
-            "200": {
-              "description": "New user is created",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
             },
-            "400": {
-              "description": "Bad Request",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"              
-              }
+            "400":{
+              "$ref": "#/components/responses/400"
             },
-            "409": {
-              "description": "Login already exist",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"
-              }
+            "401":{
+              "$ref": "#/components/responses/401"
             }
+            
           }
         }
       },
       "/auth/signout": {
         "post": {
+          "summary": "Loguot from application",
+          "description": "Delete user's refresh token from DB",
           "tags": ["Auth"],
-          "summary": "SignUp",
-          "description": "Create new User",
-          "parameters": [
-            {
-              "name": "user",
-              "in": "body",
-              "description": "User that we want to create",
-              "schema": {
-                "required": [
-                  "name",
-                  "login",
-                  "password"
-                ],
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "login": {
-                    "type": "string"
-                  },       
-                  "password": {
-                    "type": "string"
-                  }       
-                },
-                "example": {
-                  "name": "Ilon Mask",
-                  "login": "IMask",
-                  "password": "Tesla4ever"
-                }
-              }
-              
-            }
-          ],
-          "produces": ["application/json"],
           "responses": {
-            "200": {
-              "description": "New user is created",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
+            "204": {
+              "description": "Logout succsess. Deleted cookie named `refreshToken`.\n"
             },
-            "400": {
-              "description": "Bad Request",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"              
-              }
+            "400":{
+              "$ref": "#/components/responses/400"
             },
-            "409": {
-              "description": "Login already exist",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"
-              }
+            "401":{
+              "$ref": "#/components/responses/401"
             }
+            
           }
         }
       },
       "/auth/refresh": {
         "get": {
+          "summary": "Refresh tokens",
+          "description": "If there is valid token in cookie return a new pair of tokens will be returned",
           "tags": ["Auth"],
-          "summary": "Refresh",
-          "description": "Create new User",
-          "parameters": [
-            {
-              "name": "user",
-              "in": "body",
-              "description": "User that we want to create",
-              "schema": {
-                "required": [
-                  "name",
-                  "login",
-                  "password"
-                ],
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "login": {
-                    "type": "string"
-                  },       
-                  "password": {
-                    "type": "string"
-                  }       
-                },
-                "example": {
-                  "name": "Ilon Mask",
-                  "login": "IMask",
-                  "password": "Tesla4ever"
-                }
-              }
-              
-            }
-          ],
-          "produces": ["application/json"],
           "responses": {
             "200": {
-              "description": "New user is created",
-              "schema": {
-                "$ref": "#/definitions/User"
+              "description": "Tokens updated. Response is returned in a cookie named `refreshToken`. You need to include this cookie in subsequent requests" , 
+              "headers": {
+                "Set-Cookie": {
+                  "schema": {
+                    "type": "string",
+                    "example": "refreshToken=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6IklNYXNrQGltYXNrLnJ1IiwiaWF0IjoxNjkxNjE0MDk5LCJleHAiOjE2OTE2MTc2OTl9.raq5-L2_IzcMoC7TgSjfFMfpyFuMF5grRJy43Qm-9zc; Path=/; HttpOnly"
+                  }
+                }
+              },
+              "content": {
+                "application/json": {
+                  "schema": {
+                  "$ref": "#/components/schemas/AutorizationResponse"
+                  }
+                }
               }
             },
-            "400": {
-              "description": "Bad Request",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"              
-              }
+            "400":{
+              "$ref": "#/components/responses/400"
             },
-            "409": {
-              "description": "Login already exist",
-              "schema": {
-                "$ref": "#/definitions/ErrorResponse"
-              }
+            "401":{
+              "$ref": "#/components/responses/401"
             }
+            
           }
         }
       }
     },
-    "definitions" : {
-      "User": {
-        "required": [
-          "_id",
-          "name",
-          "login"
-        ],
-        "properties": {
-          "_id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "login": {
-            "type": "string"
-          }      
+    "components" : {
+      "requestBodies": {
+        "Autorization": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "login",
+                  "password"
+                ],
+                "properties": {
+                  "login": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                },
+                "example": {
+                  "login": "Vasy@mail.ru",
+                  "password": "newVasy"
+                }
+              }
+            }
+          }
         }
       },
-      "ErrorResponse": {
-        "required": [
-          "statusCode",
-          "message"
-        ],
-        "properties": {
-          "statusCode": {
-            "type": "number"
-          },
-          "message": {
-            "type": "string"
-          }     
+    
+      "schemas": {
+        "AutorizationResponse": {
+          "required": ["accessToken"],
+          "properties": {
+            "accessToken": {
+              "type":"string"
+              
+            },
+            "user": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string"
+                },
+                "login": {
+                  "type":"string"
+                }
+              }
+            
+            }      
+          }
         },
-        "example": {
-          "statusCode": "4xx",
-          "message": "reason"
+        "User":{
+          "required": [
+            "login",
+            "password"
+          ],
+          "properties": {
+            "login": {
+              "type": "string"
+            },
+            "password": {
+              "type": "string"
+            }
+          },
+          "example": {
+            "login": "Vasy@mail.ru",
+            "password": "newVasy"
+          }
+
+        },
+        "ErrorResponse": {
+          "required": [
+            "statusCode",
+            "message"
+          ],
+          "properties": {
+            "statusCode": {
+              "type": "integer"
+            },
+            "message": {
+              "type": "string"
+            },
+            "errors":{
+              "type": "array",
+              "items":{
+                "type": "string"
+              }
+            }     
+          },
+          "example": {
+            "statusCode": "4xx",
+            "message": "reason",
+            "errors":[]
+          }
+        }
+      },
+    "responses": {
+      "400":{
+        "description": "Bad request",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/ErrorResponse"
+            }
+          }
+        }
+      },
+      "401": {
+        "description": "Authorization error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/ErrorResponse"
+            }
+          }
         }
       }
     }
-}
+    }
+  }
